fix z-index on controls for better focus outline

--- a/assets/component-slideshow.css
+++ b/assets/component-slideshow.css
@@ -184,7 +184,7 @@ slideshow-component:not(.page-width) .slider-buttons {
   .slider-buttons--in-between {
     position: absolute;
     width: 100%;
-    z-index: 1;
+    z-index: 2;
   }
 
   slideshow-component.page-width .slider-buttons--in-between {
@@ -199,7 +199,6 @@ slideshow-component:not(.page-width) .slider-buttons {
   display: flex;
   justify-content: center;
   align-items: center;
-  z-index: 2;
 }
 
 @media screen and (min-width: 750px) {
